--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -3,13 +3,57 @@
     padding: 0;
 }
 
+.nav.default-nav svg {
+    background-color: transparent;
+}
+
+.each-slide {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.each-slide span {
+    padding: 20px;
+    font-size: 18px;
+    background: #efefef;
+    text-align: center;
+}
+
+.each-slide img {
+    display: hidden;
+}
+
+.lazy {
+    object-fit: cover;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.7s ease;
+}
+
+.dot.active {
+    background-color: #717171;
+}
+
 .img-container {
     text-align: center;
 }
 
 .thumbnail {
     width: 75%;
-    height: relative;
+    height: auto;
     padding: 5px 10px;
 }
 
@@ -45,16 +89,10 @@
     border-radius: 5px;
 }
 
-.video {
-    padding: 10px 50px;
-    display: flex;
-    align-items: center;
-    
-}
-
 .yt_trailer {
-    width: 800px;
-    height: 450px;
+    width: 600px;
+    height: 337.5px;
+    object-fit: cover;
     margin: 0 auto;
 }
 
@@ -75,23 +113,90 @@
 
 .title {
     text-align: left;
-    padding-bottom: 20px;
+    padding: 5px 10px;
 }
 
 .people {
     display: flex;
     justify-content: flex-start;
-    /* position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    display: flex;
-    flex-wrap: wrap;
-    transition-property: transform;
-    box-sizing: content-box; */
 }
 
 .people p {
     margin: 0;
     padding: 5px;
+}
+
+@media screen and (max-width: 1024px) {
+    .synopsis, .directorCast {
+        padding: 15px 100px;
+    }
+
+    .highlightInfo {
+        margin: 50px 30px;
+    }
+
+    .thumbnail {
+        width: 55%;
+        padding: 0;
+        margin: 10px 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .highlightInfo {
+        margin: 50px 30px;
+    }
+
+    .thumbnail {
+        width: 75%;
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .video {
+        padding: 20px;
+    }
+
+    .yt_trailer {
+        width: 500px;
+        height: 281px;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .video {
+        padding: 5px;
+    }
+
+    .yt_trailer {
+        width: 375px;
+        height: 210px;
+    }
+
+    .synopsis {
+        padding: 10px 40px;
+    }
+
+    .highlightInfo {
+        margin: 0;
+        padding: 15px 30px;
+    }
+
+    .directorCast {
+        padding: 20px;
+    }
+
+    .lazy {
+        height: 168px;
+    }
+
+    .people {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .people p {
+        font-size: 14px;
+    }
 }
