--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -126,7 +126,7 @@
     padding: 5px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 450px) and (max-width: 1023px) {
     .synopsis, .directorCast {
         padding: 15px 100px;
     }
@@ -140,20 +140,7 @@
         padding: 0;
         margin: 10px 30px;
     }
-}
 
-@media screen and (max-width: 768px) {
-    .highlightInfo {
-        margin: 50px 30px;
-    }
-
-    .thumbnail {
-        width: 75%;
-        margin: 10px;
-    }
-}
-
-@media screen and (max-width: 540px) {
     .video {
         padding: 20px;
     }
